style.css
body {
  background-color: beige;
}
h1 {
  color: blue;
}
p {
  color: darkblue;
}

section span {
  position: absolute;
  background: transparent;
  bottom: 0;
  border-radius: 50%;
  pointer-events: none;
  box-shadow: inset 0 0 10px rgb(255, 255, 255, 0.5);
  animation: anim 4s linear infinite;
}

section span::before {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  transform: scale(0.25) translate(-70%, -70%);
  background: radial-gradient(#fff, transparent);
}
@keyframes anim {
  0% {
    transform: translate(0%);
    opacity: 1;
  }
  100% {
    transform: translateY(-1200px);
    opacity: 0;
  }
}

body{
	font-family: 'Barlow Condensed', sans-serif;
    background-color: #9dc7d8;
	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='18' viewBox='0 0 100 18'%3E%3Cpath fill='%23f5fcff' fill-opacity='0.4' d='M61.82 18c3.47-1.45 6.86-3.78 11.3-7.34C78 6.76 80.34 5.1 83.87 3.42 88.56 1.16 93.75 0 100 0v6.16C98.76 6.05 97.43 6 96 6c-9.59 0-14.23 2.23-23.13 9.34-1.28 1.03-2.39 1.9-3.4 2.66h-7.65zm-23.64 0H22.52c-1-.76-2.1-1.63-3.4-2.66C11.57 9.3 7.08 6.78 0 6.16V0c6.25 0 11.44 1.16 16.14 3.42 3.53 1.7 5.87 3.35 10.73 7.24 4.45 3.56 7.84 5.9 11.31 7.34zM61.82 0h7.66a39.57 39.57 0 0 1-7.34 4.58C57.44 6.84 52.25 8 46 8S34.56 6.84 29.86 4.58A39.57 39.57 0 0 1 22.52 0h15.66C41.65 1.44 45.21 2 50 2c4.8 0 8.35-.56 11.82-2z'%3E%3C/path%3E%3C/svg%3E");
	/*backgroud from https://heropatterns.com*/
	
	margin: 25px 25px 25px 25px;
	padding-top: 20px;
	padding-right: 30px;
	padding-bottom: 20px;
	padding-left: 30px;
}
h1{
    color: #116689;
	font-size: 300%;
	background-color: rgba(255, 255, 255, 0.2);
	padding: 10px;
	border-radius: 15px;
	
}

h3{
	font-size: 200%;
	text-shadow: 2px 2px 6px #116689;
	background-color: rgba(255, 255, 255, 0.2);
	
	padding: 5px;
	border-radius: 15px;
	
}

h4{
	font-size: 150%;
	background-color: rgba(255, 255, 255, 0.2);
	padding: 5px 5px;
	border-radius: 15px;
}

p{
	background-color: #9dc7d8;
	width: 90%;
	border: 5px solid #c0dce8;
	background-color: #c0dce8;
	width: 90%;
	border: 5px solid #9dc7d8;
  padding-top: 5px;
	padding-bottom: 5px;
	padding-right: 10px;
	padding-left: 10px;
	margin: 10px;
	border-radius: 15px;
}

img{
    width: 600px;
    height: auto;
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: #333;
  border-radius: 15px;
}

li {
  float: left;
}

li a {
  display: block;
  color: white;
  text-align: center;
  padding: 10px 13px;
  text-decoration: none;
  
}

a:hover:not(.active) {
  background-color: #111;
}

.active {
  background-color:#116689;
  font-weight: bold;
}

